# RustyGraphics

./: .gitignore  Cargo.toml
impressionist/: Cargo.toml
impressionist/src/: img_helper.rs  main.rs  optimizer.rs  optimizers.rs  painting.rs  shape.rs
impressionist/src/optimizers/: no_optimizer.rs  simple_optimizer.rs
retroimage/: Cargo.toml
retroimage/src/: diffuse.rs  lib.rs  main.rs
retroimage/tests/: test_compress.rs
src/: main.rs  mcpaint.rs
tests/: test_compress.rs
