[workspace]
members = ["impressionist", "retroimage"]

resolver = "3"

[workspace.dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
log = "0.4.29"
image = "0.25.9"
itertools = "0.14.0"

[profile.dev]
opt-level = 0
debug = 2
